--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,8 +1,6 @@
-- src: geerlingguy.php
-  version: 3.7.0
+- src: iroquoisorg.php5
 - src: oefenweb.composer
   version: v2.0.29
 - src: geerlingguy.apache
   version: 3.1.0
-- src: rheinwerk.mysql
-  version: v1.0.1
+- src: iroquoisorg.mysql
